fix issue #8866: parameters passed to socket.getaddrinfo can now be specified as single keyword arguments.